# tameshi-attest

./: .gitignore  Cargo.build-spec.json  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml
src/: main.rs
