[package]
name = "tameshi-attest"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "pleme-io GitHub Action — emit BLAKE3 source/build/image attestation hashes for a release"
license = "MIT"
authors = ["drzzln <drzzln@protonmail.com>"]
repository = "https://github.com/pleme-io/tameshi-attest"

[[bin]]
name = "tameshi-attest"
path = "src/main.rs"

[dependencies]
pleme-actions-shared = { git = "https://github.com/pleme-io/pleme-actions-shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
blake3 = "1"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
pedantic = "warn"
